--- a/styles.css
+++ b/styles.css
@@ -2,28 +2,59 @@ body {
   background-color: black;
 }
 
-#contenedorTarjetas {
+header > h2 {
+  color: #08e944;
+  font-size: 35px;
+  text-align: center;
+}
+
+#cotizacionesContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  color: #08e944;
+  gap: 2rem;
 }
 
 .card {
-  background-color: #bebbbb;
-  border: 2px solid #ffffff;
-  padding: 10px;
-  margin: 10px;
-  cursor: pointer;
+  border: 1px solid #08e944;
   width: 250px;
-  border-radius: 30px;
+  height: 280px;
+  border-radius: 20px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 28px;
+  background-color: #033611;
 }
 
-.card-body {
-  text-align: center;
+.card > hr {
+  width: 250px;
+  color: #08e944;
+}
+.cardCotizaciones {
+  display: flex;
+  justify-content: space-around;
 }
 
-.card-title {
-  font-size: 25px;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+.cardCompraVenta {
+  display: flex;
+  flex-direction: column;
+}
+
+.cardSubtitulo {
+  font-size: 20px;
+}
+
+.precio {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.v-line {
+  border-left: 1px solid #30f509;
+  height: 18%;
+  left: 50%;
+  position: absolute;
 }
