--- a/styles.css
+++ b/styles.css
@@ -75,12 +75,12 @@ header > h5 {
   position: absolute;
 }
 
-.dRed {
+#dRed {
   color: red;
   font-size: 55px;
   text-align: center;
 }
 
-p.white {
+#white {
   color: white;
 }
