Dolar Red formatting

--- a/styles.css
+++ b/styles.css
@@ -90,3 +90,9 @@ header > h5 {
   font-size: 55px;
   text-align: center;
 }
+
+#dolarMep {
+  color: red;
+  font-size: 55px;
+  text-align: center;
+}
