--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,9 @@ header > h5 {
   font-size: 55px;
   text-align: center;
 }
+
+body  {
+  background-image: url("assets/Argentina-canada-flags-half.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
