--- a/styles.css
+++ b/styles.css
@@ -104,3 +104,15 @@ body  {
   width: 100%;
   background-size: cover;
 }
+
+#redBox {
+  border: 1px solid black;
+  width: 260px;
+  height: 320px;
+  border-radius: 20px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  font-size: 28px;
+  background-color: black;
+}
