--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ header > h5 {
   flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 28px;
-  background-color: #033611;
+  background-color: rgba(0,0,0,0.75);
 }
 
 .card > hr {
