--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ header > h5 {
 }
 
 .card {
-  border: 1px solid #08e944;
+  border: 1px solid rgba(117,170,219,1);;
   width: 260px;
   height: 320px;
   border-radius: 20px;
