--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ header > h5 {
   flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 28px;
-  background-color: rgba(0,0,0,0.75);
+  background-color: rgba(0,0,0,0.5);
 }
 
 .card > hr {
@@ -115,4 +115,9 @@ body  {
   background-color: rgba(0,0,0,0.75);
   margin: auto;
   padding: 0.5em;
+}
+
+section {
+  background-color: rgba(0,0,0,0.65);
+  border: 0.15em solid red;
 }
