--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,8 @@ body  {
 section {
   background-color: rgba(0,0,0,0.65);
   border: 0.15em solid red;
-  margin: 2em 65%;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  width: 65%;
   border-radius: 20px;
 }
