--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ body  {
   height: 280px;
   border-radius: 20px;
   text-align: center;
-  font-size: 28px;
+  font-size: 2em;
   background-color: rgba(0,0,0,0.75);
   margin: auto;
   padding: 0.5em;
