add github & contact

--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ a {
   margin: auto;
 }
 
-#contact {
+#contactPage {
   background-image: url("assets/Argentina-canada-flags-flipped.jpg");
   background-repeat: no-repeat;
   background-size: cover;
