--- a/contact.css
+++ b/contact.css
@@ -26,8 +26,9 @@ section {
   margin-bottom: 2em;
   margin-left: auto;
   margin-right: auto;
-  width: 65%;
+  width: 50%;
   border-radius: 20px;
   padding: 1.5em;
   line-height: 1.75em;
+  text-align: center;
 }
