add github & contact

--- a/contact.css
+++ b/contact.css
@@ -35,7 +35,8 @@ section {
 }
 
 header > h2 {
-  margin-top: 5em;
+  margin-top: 3em;
+  margin-bottom: 2em;
   color: rgba(255,50,50,1);
   text-align: center;
   font-size: 2em;
