--- a/contact.css
+++ b/contact.css
@@ -41,3 +41,9 @@ header > h2 {
   text-align: center;
   font-size: 2em;
 }
+
+h1 {
+  text-align: center;
+  color: rgba(255,50,50,1);
+  font-size: 1.5em;
+}
